# TinyInfer

./: CMakeLists.txt
tiny/include/base/: alloc.h
tiny/source/: main.cpp
